--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -1803,6 +1803,9 @@ public final class ViewRootImpl ... {
 
 #### `dispatchTouchEvent` 方法
 
+![事件分发](https://img2018.cnblogs.com/blog/653161/201903/653161-20190321113420853-1974821013.png)
+![事件分发流程](https://juejin.cn/post/7102248400019521544)
+
 每当用户触摸屏幕时, 系统会首先将触摸事件封装成 `MotionEvent` 对象, 并通过当前 `Activity` 将事件传递给 `DecorView` 中的根视图 `ViewGroup` 对象, 由根视图对象将此事件传递给其子视图, 一直到最终的目标视图.
 
 包括 `Activity`, `Window`, `ViewGroup`, `View` 在内的所有类型对象都有一个 `dispatchTouchEvent` 方法, 用于分发触摸事件. 以下介绍每种对象的 `dispatchTouchEvent` 方法的实现逻辑:
@@ -1822,18 +1825,33 @@ public final class ViewRootImpl ... {
         - 拦截条件2: 不是 `ACTION_DOWN` 事件, 且没有任何子视图在处理当前触摸事件. 也视为拦截成功. 后续不会再进行向子视图的触摸事件分发.
     - 然后判断事件是否被取消, 通过 `FLAG_CANCEL_FORCED` 标志或事件类型是否是 `ACTION_CANCEL` 来判断. 事件被取消会导致事件不再向子视图传递.
     - 判断是否需要进行多点触控事件的处理, 通过 `FLAG_SPLIT_MOTION_EVENTS` 标志和是否不是鼠标事件来判断.
-    - 当事件是 `ACTION_DOWN`(初始按下) 或 `ACTION_POINTER_DOWN`(多点触控新增的手指按下) 或 `ACTION_HOVER_MOVE`(按下后移动) 时, 先逆序查找所有可以接收事件的子视图 (视图是否可见、能否接收事件) 并调用子视图的 `dispatchTouchEvent` 方法传递事件, 直到有子视图消费事件或者事件被取消. 而如果没有子视图消费事件, 则尝试将要处理的事件分发给第一次按下时保存的所有可以处理事件的子视图链表中的.
-    - 
-
-- `ViewGroup.dispatchTouchEvent`
+    - 进行事件分发判断和处理
+        - 当事件是 `ACTION_DOWN`(初始按下) 或 `ACTION_POINTER_DOWN`(多点触控新增的手指按下) 或 `ACTION_HOVER_MOVE`(按下后移动) 时
+            - 先逆序查找所有可以接收事件的子视图 (确认视图能否接收事件) 并调用子视图的 `dispatchTouchEvent` 方法传递事件, 直到有子视图消费事件或者事件被取消. 如果事件被消费了, 将可接收子视图保存在链表结构头部, 为多点触控事件做准备.
+            - 如果没有子视图消费事件, 但是事件是多点触控和触摸后移动事件, 则尝试将要处理的事件分发给第一次按下时保存的所有可以处理事件的子视图链表中的尾部视图.
+        - 如果是其他事件, 则直接从头到尾遍历所有可以接收事件的子视图, 并调用子视图的 `dispatchTouchEvent` 方法传递事件, 直到有子视图消费事件或者事件被取消.
 
 - `View.dispatchTouchEvent`
+    - 进行设置输入一致性验证, 辅助功能标志, 安全性检查等. (不重要)
+    - 如果视图启用了滚动条并且事件是相关的滚动操作, 会先尝试处理滚动条拖拽事件 `handleScrollBarDragging` 方法, 消费后继续向下.
+    - 如果设置了触摸事件监听器, 会先调用监听器的 `onTouch` 方法处理事件, 消费后直接返回.
+    - 调用视图自身的 `onTouchEvent` 方法处理事件, 消费后直接返回.
+    - 未消费事件, 返回 false.
 
-#### `onTouchEvent` 方法
+##### `onTouchEvent` 方法
 
-#### `onInterceptTouchEvent` 方法
+##### `onInterceptTouchEvent` 方法
 
-#### `onRequestDisallowInterceptTouchEvent` 方法
+##### `handleScrollBarDragging` 方法
+
+##### `requestDisallowInterceptTouchEvent` 方法
+
+通过设置 `FLAG_DISALLOW_INTERCEPT` 标志来控制父视图是否拦截触摸事件.
+
+##### `setMotionEventSplittingEnabled` 方法
+
+通过设置 `FLAG_SPLIT_MOTION_EVENTS` 标志来控制是否分割多点触控事件.
+
 
 #### `getMeasuredWidth` 和 `getWidth` 方法的区别
 
@@ -1881,7 +1899,7 @@ public class View ... {
 > [](https://developer.android.com/guide/fragments/animate)
 > [Frame Animation（逐帧动画）](https://developer.aliyun.com/article/567019)
 
-#### Frame动画(帧动画)
+#### Frame 动画(帧动画)
 
 帧动画: 通过一系列的图片帧来实现动画效果, 适用于帧数较少的动画效果
 
@@ -1915,95 +1933,23 @@ AnimationDrawable rocketAnimation = (AnimationDrawable) rocketImage.getBackgroun
 rocketAnimation.start();
 ```
 
-#### Tween Animation（补间动画, 平移, 缩放, 旋转, 透明度）
->
-> [!cite]
->
-> [Tween(补间动画)完全解析](https://blog.csdn.net/dmk877/article/details/51912104)
+#### 插值器和求值器
 
-补间动画: 通过对视图的属性进行动画操作, 适用于简单的动画效果
+每一个动画都有一个插值器和一个求值器, 插值器控制动画的进度, 求值器控制动画的属性值.
 
-- 动画文件定义位置: `res/anim/`
-- 使用时以 `View` 为载体, 通过 `View.startAnimation()` 方法启动动画
-
-```xml
-<translation xmlns:android="http://schemas.android.com/apk/res/android"
-    // 平移动画
-    android:fromXDelta="0" // 起始位置 x 坐标 (px值, 百分比值, 百分比 p 值)
-    android:toXDelta="100" // 结束位置 x 坐标
-    android:fromYDelta="0" // 起始位置 y 坐标
-    android:toYDelta="100" // 结束位置 y 坐标
-
-// 百分比 p 值表示相对于父容器宽或高的百分比值, 0% 表示起始位置, 100% 表示结束位置
-/>
-
-<scale xmlns:android="http://schemas.android.com/apk/res/android"
-    // 缩放动画
-    android:fromXScale="1.0" // 起始 x 缩放比例, 0-1 缩小, 1-∞ 放大
-    android:toXScale="0.5" // 结束 x 缩放比例
-    android:fromYScale="1.0" // 起始 y 缩放比例
-    android:toYScale="0.5" // 结束 y 缩放比例
-
-    android:pivotX="50%" // 视图缩放的中心 x 坐标 (px 值, 百分比值, 百分比 p 值)
-    android:pivotY="50%" // 视图缩放的中心 y 坐标
-/>
-
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    // 旋转动画
-    android:fromDegrees="0" // 起始角度
-    android:toDegrees="360" // 结束角度
-    android:pivotX="50%" // 旋转中心 x 坐标 (px 值, 百分比值, 百分比 p 值)
-    android:pivotY="50%" // 旋转中心 y 坐标
-/>
-
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    // 透明度动画
-    android:fromAlpha="1.0" // 起始透明度
-    android:toAlpha="0.0" // 结束透明度
-/>
-
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    // 组合动画
-    android:shareInterpolator="true" // 是否共享插值器, false 时需要为每个子动画设置插值器
-    android:ordering="together" // 动画执行顺序, together 为同时执行, sequential 为顺序执行. 可以通过 startOffset 属性自定义每个动画开始前的延迟时间
->
-
-    <alpha
-        ...
-    />
-
-    <scale
-        ...
-    />
-
-    ...
-
-</set>
-
-<any 
-    // 通用属性
-    android:duration="1000" // 动画持续时间
-    android:startOffset="1000" // 动画开始前的延迟时间
-    android:fillBefore="true" // 动画结束后是否回到初始状态, 默认为 true
-    android:fillEnabled="true" // 是否启用 fillBefore, 默认为 true
-    android:fillAfter="true" // 动画结束后是否保持结束状态, 默认为 false, 优先于 fillBefore
-    android:repeatCount="infinite" // 动画重复次数, 默认为 0, 0 为不重复, -1 为无限重复
-    android:repeatMode="reverse" // 动画重复模式, 默认为 restart, reverse 为反向重复
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator" // 动画插值器
-/>
-```
+插值器（Interpolator）决定了动画的进度如何随时间变化. 时间是线性的, 但是动画的进度不一定是线性的, 插值器就是用来控制动画进度的, 在固定的时间内, 可以让它先快后慢, 先慢后快 或者提前到达终点进行回弹等.
 
 默认可用的插值器:
 
-- `@android:anim/linear_interpolator`: 线性匀速
-- `@android:anim/decelerate_interpolator`: 减速
-- `@android:anim/accelerate_interpolator`: 加速
-- `@android:anim/overshoot_interpolator`: 快速超出终点一小步后回弹到终点
-- `@android:anim/anticipate_interpolator`: 先回退一小步再加速
-- `@android:anim/accelerate_decelerate_interpolator`: 先加速后减速
-- `@android:anim/anticipate_overshoot_interpolator`: 先回退一小步再加速, 最后超出重点一小步后回弹到终点
-- `@android:anim/bounce_interpolator`: 加速到终点后持续弹跳直至停止
-- `@android:anim/cycle_interpolator`: 周期运动
+- `@android:anim/linear_interpolator` | `LinearInterpolator`: 线性匀速
+- `@android:anim/decelerate_interpolator` | `DecelerateInterpolator`: 减速
+- `@android:anim/accelerate_interpolator` | `AccelerateInterpolator`: 加速
+- `@android:anim/overshoot_interpolator` | `OvershootInterpolator`: 快速超出终点一小步后回弹到终点
+- `@android:anim/anticipate_interpolator` | `AnticipateInterpolator`: 先回退一小步再加速
+- `@android:anim/accelerate_decelerate_interpolator` | `AccelerateDecelerateInterpolator`: 先加速后减速
+- `@android:anim/anticipate_overshoot_interpolator` | `AnticipateOvershootInterpolator`: 先回退一小步再加速, 最后超出重点一小步后回弹到终点
+- `@android:anim/bounce_interpolator` | `BounceInterpolator`: 加速到终点后持续弹跳直至停止
+- `@android:anim/cycle_interpolator` | `CycleInterpolator`: 周期运动
 
 ```xml
 // 默认插值器的参数设置
@@ -2017,178 +1963,6 @@ rocketAnimation.start();
 <bounceInterpolator xmlns:android="http://schemas.android.com/apk/res/android" /> // 无法自定义参数
 <cycleInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:cycles="2" /> // 
 ```
-
-#### Property Animation（属性动画）
-
-属性动画: 通过对视图的属性进行动画操作, 适用于复杂的动画效果.
-
-- 针对属性值进行动画操作, 因此适用于任何对象的任何属性, 而不仅限于平移, 缩放, 旋转, 透明度等.
-- 动画操作可以针对于对象本身, 而不是如补间动画那样只是改变了视图对象的显示效果.
-- 属性动画支持所有的通用属性, 如动画持续时间, 动画插值器等.
-
-##### 代码使用方式
-
-- `ValueAnimator`
-
-构造时直接传入起始值, 中间值(可选, 可多个), 结束值. 使用时需要通过动画监听器来监听动画过程中属性值的变化, 并在监听器中根据当前属性值来更新目标对象的属性值(如视图的位置), 从而实现动画效果. 注意动画监听器有两种, 一种是专属 `ValueAnimator`的 `AnimatorUpdateListener` 用于监听动画过程中属性值的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
-
-```kotlin
-// 创建 ValueAnimator 对象
-val valueAnimator = ValueAnimator.ofInt(0, 100).apply {
-    // 设置动画持续时间
-    duration = 1000
-    // 设置动画插值器
-    interpolator = AccelerateDecelerateInterpolator()
-    // 添加动画监听器
-    addUpdateListener {
-        val value = it.animatedValue as Int
-        view.layout(value, value, value + view.width, value + view.height)
-    }
-}
-// 启动动画
-valueAnimator.start()
-```
-
-- `ObjectAnimator`
-
-`ObjectAnimator` 是 `ValueAnimator` 的子类, 用于对对象的属性进行动画操作. 构造时需要传入目标对象, 属性名称, 起始值, 中间值(可选, 可多个), 结束值. 使用时直接调用 `start()` 方法启动动画. 注意对象属性必须可以 get 和 set.
-
-```kotlin
-// 创建 ObjectAnimator 对象
-val objectAnimator = ObjectAnimator.ofFloat(view, "translationX", 0f, 100f).apply {
-    // 设置动画持续时间
-    duration = 1000
-    // 设置动画插值器
-    interpolator = AccelerateDecelerateInterpolator()
-}
-// 启动动画
-objectAnimator.start()
-```
-
-- `TimeAnimator`
-
-`TimeAnimator` 是 `ValueAnimator` 的子类, 用于监听动画过程中的时间变化. 使用时需要通过动画监听器来监听动画过程中时间的变化, 并在监听器中根据当前时间来更新目标对象的属性值, 从而实现动画效果. 注意动画监听器有两种, 一种是专属 `TimeAnimator`的 `TimeListener` 用于监听动画过程中时间的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
-
-```kotlin
-// 创建 TimeAnimator 对象
-val timeAnimator = TimeAnimator().apply {
-    // 添加动画监听器
-    setTimeListener { animation, totalTime, deltaTime ->
-        view.layout(deltaTime.toInt(), deltaTime.toInt(), deltaTime.toInt() + view.width, deltaTime.toInt() + view.height)
-    }
-}
-// 启动动画
-timeAnimator.start()
-```
-
-- `AnimatorSet`
-
-借助 `AnimatorSet` 可以将多个动画组合在一起, 并设置它们的执行顺序, 重复次数, 重复模式等. 使用时需要通过 `play()` 方法将多个动画添加到 `AnimatorSet` 中, 然后通过 `start()` 方法启动动画.
-
-```kotlin
-// 创建 ObjectAnimator 对象
-val objectAnimator1 = ...
-val objectAnimator2 = ...
-val objectAnimator3 = ...
-val objectAnimator4 = ...
-val objectAnimator5 = ...
-
-// 创建 AnimatorSet 对象
-val animatorSet = AnimatorSet().apply {
-    // 设置动画执行顺序
-    play(objectAnimator1).before(objectAnimator2)
-    playTogether(objectAnimator2, objectAnimator3)
-    playSequentially(objectAnimator4, objectAnimator5)
-    // 设置动画重复次数
-    repeatCount = ValueAnimator.INFINITE
-    // 设置动画重复模式
-    repeatMode = ValueAnimator.REVERSE
-}
-// 启动动画
-animatorSet.start()
-```
-
-##### xml 使用方式
-
-- 动画文件定义位置: `res/animator/`
-- 使用时需要每个动画都需要绑定目标对象的属性名称, 并通过 `setTarget()` 方法绑定目标对象, 然后再通过 `start()` 方法启动动画.
-- 23 之后的安卓版本可以使用 `PropertyValuesHolder` 和 `Keyframe` 来进阶定义动画效果, 比如为动画添加关键帧, 设置关键帧的插值器, 为 `objectAnimator` 添加多个属性值等.
-
-```xml
-<animator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:valueFrom="1"
-    android:valueTo="0"
-    android:valueType="floatType"
-/>
-
-<animator xmlns:android="http://schemas.android.com/apk/res/android">
-    <propertyValuesHolder>
-        <keyframe android:fraction="0" android:value="1"/>
-        <keyframe android:fraction=".2" android:value=".4"/>
-        <keyframe android:fraction="1" android:value="0"/>
-    </propertyValuesHolder>
-</animator>
-
-<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:propertyName="translationX" // 动画属性名称
-    android:valueFrom="0" // 起始值
-    android:valueTo="100" // 结束值
-    android:valueType="floatType" // 属性值类型
-/>
-
-<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android">
-    <propertyValuesHolder android:propertyName="x" >
-        <keyframe android:fraction="0" android:value="800" />
-        <keyframe android:fraction=".2"
-                android:interpolator="@android:anim/accelerate_interpolator"
-                android:value="1000" />
-        <keyframe android:fraction="1"
-                android:interpolator="@android:anim/accelerate_interpolator"
-                android:value="400" />
-    </propertyValuesHolder>
-    <propertyValuesHolder android:propertyName="y" >
-        <keyframe/>
-        <keyframe android:fraction=".2"
-                android:interpolator="@android:anim/accelerate_interpolator"
-                android:value="300"/>
-        <keyframe android:interpolator="@android:anim/accelerate_interpolator"
-                android:value="1000" />
-    </propertyValuesHolder>
-</objectAnimator>
-
-
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    // 组合动画
-    android:shareInterpolator="true" // 是否共享插值器, false 时需要为每个子动画设置插值器
-    android:ordering="together" // 动画执行顺序, together 为同时执行, sequential 为顺序执行. 可以通过 startOffset 属性自定义每个动画开始前的延迟时间
->
-
-    <animate ... />
-    <objectAnimator ... />
-    <set ... />
-
-</set>
-
-<any 
-    // 通用属性
-    android:duration="1000" // 动画持续时间
-    android:startOffset="1000" // 动画开始前的延迟时间
-    android:fillBefore="true" // 动画结束后是否回到初始状态, 默认为 true
-    android:fillEnabled="true" // 是否启用 fillBefore, 默认为 true
-    android:fillAfter="true" // 动画结束后是否保持结束状态, 默认为 false, 优先于 fillBefore
-    android:repeatCount="infinite" // 动画重复次数, 默认为 0, 0 为不重复, -1 为无限重复
-    android:repeatMode="reverse" // 动画重复模式, 默认为 restart, reverse 为反向重复
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator" // 动画插值器
-/>
-
-val animator = AnimatorInflater.loadAnimator(context, R.animator.animator_file)
-animator.setTarget(view)
-animator.start()
-```
-
-#### 自定义插值器和估值器
-
-插值器（Interpolator）决定了动画的进度如何随时间变化. 时间是线性的, 但是动画的进度不一定是线性的, 插值器就是用来控制动画进度的, 在固定的时间内, 可以让它先快后慢, 先慢后快 或者提前到达终点进行回弹等.
 
 ```kotlin
 // 自定义插值器
@@ -2206,10 +1980,20 @@ val objectAnimator = ObjectAnimator.ofFloat(view, "translationX", 0f, 100f).appl
 objectAnimator.start()
 ```
 
-估值器（TypeEvaluator）决定了动画属性值在起始值和结束值之间随进度 (fraction) 而如何变化. 动画期间, 估值器会根据当前时间对应的动画进度来计算出当前属性值, 并将其传递给动画监听器, 从而实现动画效果.
+求值器（TypeEvaluator）决定了动画属性值在起始值和结束值之间随进度 (fraction) 而如何变化. 动画期间, 求值器会根据当前时间对应的动画进度来计算出当前属性值, 并将其传递给动画监听器, 从而实现动画效果.
+
+默认可用的求值器:
+
+- `IntEvaluator`: 用于整型属性值的求值
+- `FloatEvaluator`: 用于浮点型属性值的求值
+- `ArgbEvaluator`: 用于颜色属性值的求值
+- `RectEvaluator`: 用于矩形属性值的求值
+- `PointEvaluator`: 用于点属性值的求值
+- `IntArrayEvaluator`: 用于整型数组属性值的求值
+- `FloatArrayEvaluator`: 用于浮点型数组属性值的求值
 
 ```kotlin
-// 自定义估值器
+// 自定义求值器
 class PointFEvaluator : TypeEvaluator<PointF> {
     override fun evaluate(fraction: Float, startValue: PointF, endValue: PointF): PointF {
         val x = startValue.x + (endValue.x - startValue.x) * fraction
@@ -2218,7 +2002,7 @@ class PointFEvaluator : TypeEvaluator<PointF> {
     }
 }
 
-// 使用自定义估值器
+// 使用自定义求值器
 val startPoint = PointF(0f, 0f)
 val endPoint = PointF(500f, 500f)
 
@@ -2232,7 +2016,412 @@ animator.addUpdateListener { animation ->
 animator.start()
 ```
 
-#### 布局动画
+#### android.view.animation（视图动画, 平移, 缩放, 旋转, 透明度）
+>
+> [!cite]
+>
+> [Tween(补间动画)完全解析](https://blog.csdn.net/dmk877/article/details/51912104)
+
+视图动画: 通过对视图的属性进行动画操作, 适用于简单的动画效果
+
+- 动画文件定义位置: `res/anim/`
+- 动画定义方式
+
+    ```xml
+    <translate xmlns:android="http://schemas.android.com/apk/res/android"
+        // 平移动画
+        android:fromXDelta="0" // 起始位置 x 坐标 (px值, 百分比值, 百分比 p 值)
+        android:toXDelta="100" // 结束位置 x 坐标
+        android:fromYDelta="0" // 起始位置 y 坐标
+        android:toYDelta="100" // 结束位置 y 坐标
+
+    // 百分比 p 值表示相对于父容器宽或高的百分比值, 0% 表示起始位置, 100% 表示结束位置
+    />
+
+    <scale xmlns:android="http://schemas.android.com/apk/res/android"
+        // 缩放动画
+        android:fromXScale="1.0" // 起始 x 缩放比例, 0-1 缩小, 1-∞ 放大
+        android:toXScale="0.5" // 结束 x 缩放比例
+        android:fromYScale="1.0" // 起始 y 缩放比例
+        android:toYScale="0.5" // 结束 y 缩放比例
+
+        android:pivotX="50%" // 视图缩放的中心 x 坐标 (px 值, 百分比值, 百分比 p 值)
+        android:pivotY="50%" // 视图缩放的中心 y 坐标
+    />
+
+    <rotate xmlns:android="http://schemas.android.com/apk/res/android"
+        // 旋转动画
+        android:fromDegrees="0" // 起始角度
+        android:toDegrees="360" // 结束角度
+        android:pivotX="50%" // 旋转中心 x 坐标 (px 值, 百分比值, 百分比 p 值)
+        android:pivotY="50%" // 旋转中心 y 坐标
+    />
+
+    <alpha xmlns:android="http://schemas.android.com/apk/res/android"
+        // 透明度动画
+        android:fromAlpha="1.0" // 起始透明度
+        android:toAlpha="0.0" // 结束透明度
+    />
+
+    <set xmlns:android="http://schemas.android.com/apk/res/android"
+        // 组合动画
+        android:shareInterpolator="true" // 是否共享插值器, false 时需要为每个子动画设置插值器
+        // 可以通过 startOffset 属性自定义每个动画开始前的延迟时间, 默认一起开始
+    >
+
+        <alpha
+            ...
+        />
+
+        <scale
+            ...
+        />
+
+        ...
+
+    </set>
+
+    <any 
+        // 通用属性
+        android:duration="1000" // 动画持续时间
+        android:startOffset="1000" // 动画开始前的延迟时间
+        android:fillBefore="true" // 动画结束后是否回到初始状态, 默认为 true
+        android:fillEnabled="true" // 是否启用 fillBefore, 默认为 true
+        android:fillAfter="true" // 动画结束后是否保持结束状态, 默认为 false, 优先于 fillBefore
+        android:repeatCount="infinite" // 动画重复次数, 默认为 0, 0 为不重复, -1 为无限重复
+        android:repeatMode="reverse" // 动画重复模式, 默认为 restart, reverse 为反向重复
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator" // 动画插值器
+    />
+    ```
+
+- 动画启动方式 (xml) 暂无
+- 动画启动方式(代码)
+
+    ```kotlin
+
+    // View
+    val imageView = findViewById<ImageView>(R.id.image)
+    val animation = AnimationUtils.loadAnimation(this, R.anim.bounce_animation)
+    imageView.startAnimation(animation)
+
+    // Fragment
+    val fragmentManager = supportFragmentManager(Activity 情况下) | getParentFragmentManager()(Fragment 情况下)
+    FragmentTransaction transaction = fragmentManager.beginTransaction();
+    transaction.setCustomAnimations(R.anim.enter_animation, R.anim.exit_animation);
+    transaction.replace(R.id.fragment_container, new MyFragment());
+    transaction.commit();
+
+    // Activity
+    val intent = Intent(context, TargetActivity::class.java)
+    val options = ActivityOptions.makeCustomAnimation(context, R.anim.enter_anim, R.anim.exit_anim)
+    startActivity(intent, options.toBundle())
+    ```
+
+#### android.animation (属性动画)
+
+属性动画: 通过对视图的属性进行动画操作, 适用于复杂的动画效果.
+
+- 针对属性值进行动画操作, 因此适用于任何对象的任何属性, 而不仅限于平移, 缩放, 旋转, 透明度等.
+- 动画操作可以针对于对象本身, 而不是如补间动画那样只是改变了视图对象的显示效果.
+- 属性动画支持所有的通用属性, 如动画持续时间, 动画插值器等.
+- 动画文件定义位置: `res/animator/`
+- 使用时需要每个动画都需要绑定目标对象的属性名称, 并通过 `setTarget()` 方法绑定目标对象, 然后再通过 `start()` 方法启动动画.
+- 23 之后的安卓版本可以使用 `PropertyValuesHolder` 和 `Keyframe` 来进阶定义动画效果, 比如为动画添加关键帧, 设置关键帧的插值器, 为 `objectAnimator` 添加多个属性值等.
+- 具有与视图动画几乎相同的通用属性, 如 `duration`, `startOffset`, `fillBefore`, `fillEnabled`, `fillAfter`, `repeatCount`, `repeatMode`, `interpolator` 等.
+- 对于修改后不自动触发 `invalidate()` 方法的属性, 需要手动调用 `invalidate()` 方法来刷新视图.
+
+    ```xml
+    <any 
+        // 通用属性
+        android:duration="1000" // 动画持续时间
+        android:startOffset="1000" // 动画开始前的延迟时间
+        android:fillBefore="true" // 动画结束后是否回到初始状态, 默认为 true
+        android:fillEnabled="true" // 是否启用 fillBefore, 默认为 true
+        android:fillAfter="true" // 动画结束后是否保持结束状态, 默认为 false, 优先于 fillBefore
+        android:repeatCount="infinite" // 动画重复次数, 默认为 0, 0 为不重复, -1 为无限重复
+        android:repeatMode="reverse" // 动画重复模式, 默认为 restart, reverse 为反向重复
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator" // 动画插值器
+    />
+    ```
+
+##### `ValueAnimator` 定义
+
+构造时直接传入起始值, 中间值(可选, 可多个), 结束值. 使用时需要通过动画监听器来监听动画过程中属性值的变化, 并在监听器中根据当前属性值来更新目标对象的属性值(如视图的位置), 从而实现动画效果.
+
+- 可以通过不同的工厂方法创建不同类型的 `ValueAnimator` 对象, 如 `ofInt()`, `ofFloat()`, `ofObject()`.
+
+```kotlin
+// 创建 ValueAnimator 对象
+val valueAnimator = ValueAnimator.ofInt(0, 100)
+val valueAnimator = ValueAnimator.ofFloat(0f, 100f)
+val valueAnimator = ValueAnimator.ofObject(PointFEvaluator(), startPoint, endPoint)
+```
+
+```xml
+<animator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:valueFrom="1"
+    android:valueTo="0"
+    android:valueType="floatType" | "intType" | "objectType"
+/>
+```
+
+##### `ObjectAnimator` 定义
+
+`ObjectAnimator` 是 `ValueAnimator` 的子类, 用于对对象的属性进行动画操作. 构造时需要传入目标对象, 属性名称, 起始值, 中间值(可选, 可多个), 结束值. 使用时直接调用 `start()` 方法启动动画.
+
+- 对象属性必须可以 `get` 和 `set`. 例如, 如果属性名称是 `foo`, 则需要有一个 `getFoo()` 方法和一个 `setFoo()` 方法.
+
+```kotlin
+// 创建 ObjectAnimator 对象
+val objectAnimator = ObjectAnimator.ofInt(view, "translationX", 0, 100)
+val objectAnimator = ObjectAnimator.ofFloat(view, "translationX", 0f, 100f)
+val objectAnimator = ObjectAnimator.ofObject(view, "point", PointFEvaluator(), startPoint, endPoint)
+```
+
+```xml
+<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:propertyName="translationX" // 动画属性名称
+    android:valueFrom="0" // 起始值
+    android:valueTo="100" // 结束值
+    android:valueType="floatType" | "intType" | "objectType"
+/>
+```
+
+##### `TimeAnimator` 定义
+
+`TimeAnimator` 是 `ValueAnimator` 的子类, 用于监听动画过程中的时间变化. 使用时需要通过动画监听器来监听动画过程中时间的变化, 并在监听器中根据当前时间来更新目标对象的属性值, 从而实现动画效果. 注意动画监听器有两种, 一种是专属 `TimeAnimator`的 `TimeListener` 用于监听动画过程中时间的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
+
+```kotlin
+// 创建 TimeAnimator 对象
+val animator = TimeAnimator().apply {
+    // 添加动画监听器
+    setTimeListener { animation, totalTime, deltaTime ->
+        view.layout(deltaTime.toInt(), deltaTime.toInt(), deltaTime.toInt() + view.width, deltaTime.toInt() + view.height)
+    }
+}
+```
+
+##### `AnimatorSet` 定义
+
+借助 `AnimatorSet` 可以将多个动画组合在一起, 并设置它们的执行顺序, 重复次数, 重复模式等. 使用时需要通过 `play()` 方法将多个动画添加到 `AnimatorSet` 中, 然后通过 `start()` 方法启动动画.
+
+```kotlin
+// 创建 ObjectAnimator 对象
+val objectAnimator1 = ...
+val objectAnimator2 = ...
+val objectAnimator3 = ...
+val objectAnimator4 = ...
+val objectAnimator5 = ...
+
+// 创建 AnimatorSet 对象
+val animator = AnimatorSet().apply {
+    // 手动设置动画执行顺序
+    play(objectAnimator1).before(objectAnimator2)
+    play(objectAnimator3).with(objectAnimator2)
+    play(objectAnimator4).with(objectAnimator2)
+    play(objectAnimator5).after(objectAnimator4)
+    // 设置动画重复次数
+    repeatCount = ValueAnimator.INFINITE
+    // 设置动画重复模式
+    repeatMode = ValueAnimator.REVERSE
+}
+
+// 嵌套和统一设置方法
+val animatorSet1 = AnimatorSet().apply {
+    playTogether(objectAnimator2, objectAnimator3, objectAnimator4)
+}
+val animator = AnimatorSet().apply {
+    playSequentially(objectAnimator1, animatorSet1, objectAnimator5)
+}
+```
+
+```xml
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    // 组合动画
+    android:shareInterpolator="true" // 是否共享插值器, false 时需要为每个子动画设置插值器
+    android:ordering="together" // 动画执行顺序, together 为同时执行, sequential 为顺序执行. 也可以通过 startOffset 属性自定义每个动画开始前的延迟时间
+>
+
+    <animate ... />
+    <objectAnimator ... />
+    <set ... />
+
+</set>
+```
+
+##### 关键帧 (Keyframe)
+
+关键帧: 用于为属性动画添加关键帧, 设置关键帧的插值器, 为 `objectAnimator` 添加多个属性值等.
+
+- 关键帧使用方式 (xml)
+
+    ```xml
+    <animator xmlns:android="http://schemas.android.com/apk/res/android">
+        <propertyValuesHolder>
+            <keyframe android:fraction="0" android:value="1"/>
+            <keyframe android:fraction=".2" android:value=".4"/>
+            <keyframe android:fraction="1" android:value="0"/>
+        </propertyValuesHolder>
+    </animator>
+
+    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android">
+        <propertyValuesHolder android:propertyName="x" >
+            <keyframe android:fraction="0" android:value="800" />
+            <keyframe android:fraction=".2"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:value="1000" />
+            <keyframe android:fraction="1"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:value="400" />
+        </propertyValuesHolder>
+        <propertyValuesHolder android:propertyName="y" >
+            <keyframe/>
+            <keyframe android:fraction=".2"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:value="300"/>
+            <keyframe android:interpolator="@android:anim/accelerate_interpolator"
+                    android:value="1000" />
+        </propertyValuesHolder>
+    </objectAnimator>
+    ```
+
+- 关键帧使用方式 (代码)
+
+    ```kotlin
+    val keyframe1 = Keyframe.ofFloat(0f, 1f)
+    val keyframe2 = Keyframe.ofFloat(0.2f, 0.4f)
+    val keyframe3 = Keyframe.ofFloat(1f, 0f)
+
+    val propertyValuesHolder = PropertyValuesHolder.ofKeyframe("scaleX", keyframe1, keyframe2, keyframe3)
+    val animator = ValueAnimator.ofPropertyValuesHolder(propertyValuesHolder)
+
+    val keyframe1 = Keyframe.ofFloat(0f, 800f)
+    val keyframe2 = Keyframe.ofFloat(0.2f, 1000f)
+    val keyframe3 = Keyframe.ofFloat(1f, 400f)
+    val propertyValuesHolderX = PropertyValuesHolder.ofKeyframe("x", keyframe1, keyframe2, keyframe3)
+    val keyframe1 = Keyframe.ofFloat(0f, 0f)
+    val keyframe2 = Keyframe.ofFloat(0.2f, 300f)
+    val keyframe3 = Keyframe.ofFloat(1f, 1000f)
+    val propertyValuesHolderY = PropertyValuesHolder.ofKeyframe("y", keyframe1, keyframe2, keyframe3)
+    val animator = ObjectAnimator.ofPropertyValuesHolder(tagetView, propertyValuesHolderX, propertyValuesHolderY)
+    ```
+
+#### 属性动画启动
+
+- 动画监听器有两种, 一种是专属 `ValueAnimator`的 `AnimatorUpdateListener` 用于监听动画过程中属性值的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
+
+```kotlin
+
+// 代码动画启动
+val animator = ...
+animator.start()
+
+// xml 动画定义需要加载和启动
+val animator = AnimatorInflater.loadAnimator(context, R.animator.animator_file) as ValueAnimator | ObjectAnimator | AnimatorSet
+animator.setTarget(view)
+
+animator.apply {
+    // 设置动画持续时间
+    duration = 1000
+    // 设置动画插值器
+    interpolator = AccelerateDecelerateInterpolator()
+    // 添加动画监听器
+    addUpdateListener {
+        val value = it.animatedValue as Int | Float | PointF
+        // 修改目标对象的属性值
+    }
+
+    addListener(object : AnimatorListener {
+        // 重载方法
+    })
+}
+
+animator.start()
+
+// 布局动画启动
+
+viewGroup = <LinearLayout android:animateLayoutChanges="true" > </LinearLayout> // xml 
+viewGroup = code && viewGroup.layoutTransition.enableTransitionType(LayoutTransition.CHANGING) // 代码
+
+val layoutTransition = LayoutTransition()
+layoutTransition.setAnimator(LayoutTransition.APPEARING, animator)
+layoutTransition.setAnimator(LayoutTransition.DISAPPEARING, animator)
+layoutTransition.setAnimator(LayoutTransition.CHANGE_APPEARING, animator)
+layoutTransition.setAnimator(LayoutTransition.CHANGE_DISAPPEARING, animator)
+layoutTransition.setAnimator(LayoutTransition.CHANGING, animator)
+viewGroup.layoutTransition = layoutTransition
+
+```
+
+##### 针对视图的更简易的属性动画启动方式
+
+```kotlin
+// 代码动画启动
+view.animate().translationX(100f).translationY(100f).rotation(360f).alpha(0.5f).setDuration(1000).start()
+```
+
+#### Transition (过渡动画)
+
+过渡动画: 用于在两个视图之间进行动画切换, 适用于视图之间的切换效果.
+
+#### 状态列表动画
+
+状态列表动画: 用于在视图的不同状态之间进行动画切换, 适用于视图的状态切换效果.
+
+- 动画文件定义位置: `res/xml/`
+- 动画定义方式 (xml)
+
+    ```xml
+    <?xml version="1.0" encoding="utf-8"?>
+    <selector xmlns:android="http://schemas.android.com/apk/res/android">
+        <!-- the pressed state; increase x and y size to 150% -->
+        <item android:state_pressed="true">
+            <set>
+                <objectAnimator android:propertyName="scaleX"
+                    android:duration="@android:integer/config_shortAnimTime"
+                    android:valueTo="1.5"
+                    android:valueType="floatType"/>
+                <objectAnimator android:propertyName="scaleY"
+                    android:duration="@android:integer/config_shortAnimTime"
+                    android:valueTo="1.5"
+                    android:valueType="floatType"/>
+            </set>
+        </item>
+        <!-- the default, non-pressed state; set x and y size to 100% -->
+        <item android:state_pressed="false">
+            <set>
+                <objectAnimator android:propertyName="scaleX"
+                    android:duration="@android:integer/config_shortAnimTime"
+                    android:valueTo="1"
+                    android:valueType="floatType"/>
+                <objectAnimator android:propertyName="scaleY"
+                    android:duration="@android:integer/config_shortAnimTime"
+                    android:valueTo="1"
+                    android:valueType="floatType"/>
+            </set>
+        </item>
+    </selector>
+    ```
+
+- 动画定义方式 (代码)
+
+    ```kotlin
+    ```
+
+- 动画启动方式 (xml)
+
+    ```xml
+    <Button android:stateListAnimator="@xml/animate_scale"
+        ... />
+    ```
+
+- 动画启动方式 (代码)
+
+    ```kotlin
+    val button = findViewById<Button>(R.id.button)
+    val stateListAnimator = AnimatorInflater.loadStateListAnimator(this, R.xml.animate_scale)
+    button.stateListAnimator = stateListAnimator
+    ```
 
 ## 网络库(HttpURLConnection, OkHttp, Retrofit, 内部库)
 
