--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -738,6 +738,86 @@ class MyActivity : AppCompatActivity() {
 - 依赖注入使类能够定义其依赖项而不构造它们. 在运行时, 另一个类负责提供这些依赖项.
 - 服务定位器: 服务定位器模式提供了一个注册表, 类可以从中获取其依赖项而不构造它们.
 
+Dagger&Hilt 中常见的注解及其功能的详细介绍:
+- `@HiltAndroidApp`: 用于标记应用程序的 `Application` 类以在应用程序启动时触发 `Hilt` 的代码生成, 基于 Dagger 生成和管理依赖注入的必要组件.
+- `@AndroidEntryPoint`: 用于标记 `Activity`, `Fragment`, `View`, `Service`, `BroadcastReceiver` 等 Android 组件, 使其成为的依赖注入的入口点, 表示他们需要被注入依赖项.
+- `@HiltViewModel`: 用于标记 `ViewModel` 类, 以告知依赖注入框架为 `ViewModel` 类提供依赖注入.
+- `@Inject`: 用于标记构造函数, 字段, 方法或属性, 表示它们是依赖注入的目标, 从而自动为这些目标注入所需的依赖项. (除了默认的一些依赖, 其他依赖项都需要通过 `@Module` 来告知如何提供)
+- `@Module`: 标记一个 `object` 类为依赖注入模块, 模块中的方法可以通过 `@Provides` 注解告知依赖注入框架如何提供依赖项.
+- `@InstallIn`: 用于标记 `@Module` 类, 以指定该模块的生命周期和作用域. 如 `ApplicationComponent`, `ActivityComponent`, `FragmentComponent`, `ServiceComponent`, `BroadcastReceiverComponent` 等.
+- `@Provides`: 用于标记 `@Module` 类中的方法, 以告知依赖注入框架如何提供依赖项.
+- `@Singleton`: 用于标记依赖项的作用域, 表示该依赖项在所在的依赖注入模块的整个生命周期中只会被创建一次.
+- `@Binds`: 标记一个 `abstract` 抽象类为依赖注入模块, 模块中的抽象方法可以通过 `@Binds` 注解告知依赖注入框架如何将抽象接口方法的依赖项与具体实现绑定.
+- `@Qualifier`: 标记一个 `annotation` 注解类来自定义依赖项类型注解, 以通过注解的形式告知依赖注入框架何区分相同类型的不同依赖项实现.
+- `@Named`: 内置的用于标记依赖项的类型注解, 以通过注解的形式告知依赖注入框架何区分相同类型的不同依赖项实现.
+- `@ViewModelInject`: 内置的用于标记 `ViewModel` 类的构造函数, 以告知依赖注入框架为 `ViewModel` 类提供依赖注入.
+- `@EntryPoint`: 定义 Hilt 组件外部的依赖项的入口点. 可以让非 Hilt 管理的类也能获取依赖项.
+
+- `@ApplicationContext`: 内置的用于标记 `Context` 类型的依赖项, 以告知依赖注入框架注入的是应用程序的 `Context` 对象.
+- `@ActivityRetainedScoped`: 内置的用于定义依赖项的生命周期与 `Activity` 保持一致.
+
+```kotlin
+@HiltAndroidApp
+class MyApplication : Application()
+
+@Qualifier
+@Retention(AnnotationRetention.BINARY)
+annotation class MyQualifier
+
+@Module
+@InstallIn(SingletonComponent::class)
+object MyModule {
+    @Provides
+    @Singleton
+    fun provideMyDependency(): MyDependency {
+        return MyDependency()
+    }
+
+    @Provides
+    @Named("MyDependency")
+    fun provideNamedDependency(): MyDependency {
+        return MyDependency()
+    }
+
+    @Provides
+    @MyQualifier
+    fun provideQualifiedDependency(): MyDependency {
+        return MyDependency()
+    }
+}
+
+@Module
+@InstallIn(ApplicationComponent::class)
+abstract class MyAbstractModule {
+    @Binds
+    abstract fun bindMyDependency(impl: MyDependencyImpl): MyDependency
+}
+
+@AndroidEntryPoint
+class MyActivity : AppCompatActivity() {
+    @Inject
+    @Named("MyDependency")
+    lateinit var myDependency: MyDependency
+}
+
+@HiltViewModel
+class MyViewModel @Inject constructor(
+    @MyQualifier private val myDependency: MyDependency
+) : ViewModel()
+
+@EntryPoint
+@InstallIn(ApplicationComponent::class)
+interface MyEntryPoint {
+    fun myDependency(): MyDependency
+}
+
+class MyService : Service() {
+    private val myDependency: MyDependency by lazy {
+        EntryPointAccessors.fromApplication(this, MyEntryPoint::class.java).myDependency()
+    }
+}
+```
+
 ### 项目测试
 
 - 测试内容
